# autoencoder-iot-monitoring

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: data.yaml  model.yaml  pipeline.yaml
src/data/: load_nab.py  simulate_stream.py
src/features/: windowing.py
src/serving/: app.py  metrics.py  onnx_infer.py  schema.py
src/viz/: dashboard_streamlit.py
tests/: test_serving_contract.py  test_windowing.py
